# basic-image-processing

./: README.md
affine/: CMakeLists.txt  README.md  header.h  main.cpp  transformations.cpp
bag-of-words/: README.md  bovw-2.py  bovw.py  kmeans.py
compression/: README.md  compression.py
convolution/: CMakeLists.txt  README.md  convolution.cpp  from_eigen.cpp  header.hpp  main.cpp
dimension-based-image-sorting/: CMakeLists.txt  README.md  main.cpp
flip/: CMakeLists.txt  README.md  flip.cpp  header.h  main.cpp
gaussian-filter/: CMakeLists.txt  dilero.cpp  edgedetect.cpp  gaussian_blur.cpp  header.h  main.cpp
histogram/: CMakeLists.txt  README.md  header.h  histogram.cpp  main.cpp
image-stitching/: RANSAC.md  README.md  README_feature.md  blend.py  knn.py  main.py  ransac.py
line-detection/: CMakeLists.txt  README.md  header.h  linedetect.cpp  main.cpp
rotate/: CMakeLists.txt  README.md  header.h  main.cpp  rotate.cpp
